Fix center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -559,8 +559,13 @@ body.dark-mode button:hover {
 }
 body {
   font-family: Arial, sans-serif;
-  margin: 20px;
   background-color: #f5f5f5;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 h1, h2 {
@@ -594,10 +599,9 @@ button:hover {
 /* LOGIN PAGE STYLE */
 .login-container {
   width: 300px;
-  margin: 100px auto;
   text-align: center;
   background: white;
-  padding: 20px;
+  padding: 25px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
